created home page

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -17,6 +17,9 @@ end
 target 'AwesomeProject' do
   config = use_native_modules!
 
+  # Add RNWorklets pod
+  pod 'RNWorklets', :path => '../node_modules/react-native-worklets-core/ios'
+
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
