--- a/package.json
+++ b/package.json
@@ -10,10 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.8",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/app": "^23.1.2",
+    "@react-native-firebase/auth": "^23.1.2",
+    "@react-native-firebase/firestore": "^23.1.2",
+    "@react-native-firebase/messaging": "^23.1.2",
+    "@react-native/new-app-screen": "0.81.0",
+    "@react-navigation/bottom-tabs": "^7.4.6",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.25",
+    "@reduxjs/toolkit": "^2.8.2",
+    "date-fns": "^4.1.0",
     "react": "19.1.0",
     "react-native": "0.81.0",
-    "@react-native/new-app-screen": "0.81.0",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.15.3",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "^0.4.2",
+    "react-native-worklets-core": "^1.6.2",
+    "react-redux": "^9.2.0",
+    "realm": "^20.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -22,12 +40,15 @@
     "@react-native-community/cli": "20.0.0",
     "@react-native-community/cli-platform-android": "20.0.0",
     "@react-native-community/cli-platform-ios": "20.0.0",
+    "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native/babel-preset": "0.81.0",
     "@react-native/eslint-config": "0.81.0",
     "@react-native/metro-config": "0.81.0",
     "@react-native/typescript-config": "0.81.0",
+    "@types/date-fns": "^2.5.3",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
