changed android package name

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -117,3 +117,6 @@ dependencies {
         implementation jscFlavor
     }
 }
+
+// Apply Google Services plugin for Firebase auto-initialization
+apply plugin: 'com.google.gms.google-services'
