--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
     <!-- Allow rescheduling alarms after reboot (Notifee handles internally if present) -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <permission
         android:name="${applicationId}.permission.C2D_MESSAGE"
@@ -38,12 +37,15 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
-      <!-- Add this inside the <application> tag -->
+      <!-- Firebase Cloud Messaging Receiver -->
       <receiver
         android:name="com.google.firebase.messaging.FirebaseMessagingReceiver"
+        android:enabled="true"
         android:exported="true"
         android:permission="com.google.android.c2dm.permission.SEND">
         <intent-filter>
+          <action android:name="com.google.firebase.MESSAGING_EVENT" />
+          <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
           <action android:name="com.google.android.c2dm.intent.RECEIVE" />
           <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
           <category android:name="${applicationId}" />
@@ -64,17 +66,5 @@
         android:exported="false"
         android:taskAffinity=""
         android:permission="android.permission.BIND_JOB_SERVICE" />
-        
-      <!-- For handling scheduled notifications after reboot -->
-      <receiver
-        android:name="com.google.firebase.messaging.FirebaseMessagingReceiver"
-        android:enabled="true"
-        android:exported="true"
-        android:permission="com.google.android.c2dm.permission.SEND" >
-        <intent-filter>
-          <action android:name="com.google.firebase.MESSAGING_EVENT" />
-          <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
-        </intent-filter>
-      </receiver>
     </application>
 </manifest>
